CSS styling, footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
     <title>My Times</title>
   </head>
   <body>
+    <header>
+      <div id="logo">
+        <img src="Resources/images/img-myt-logo.jpg">
+        <p class="name">My Times</p>
+      </div>
+      <div id="nav">
+        <div id="nav2">
+          <span><a class="navlink" href="#">World</a></span>
+          <span><a class="navlink" href="#">U.S.</a></span>
+          <span><a class="navlink" href="#">Tech</a></span>
+          <span><a class="navlink" href="#">Science</a></span>
+        </div>
+      </div>
+      <hr>
+    </header>
+
+
+    <div class="main">
+      <p> Testing out the content.</p>
+    </div>
+
+
+
+
+    <div class="footer">
+      <div class="footlinks">
+        <span id="footname">MY Times</span>
+        <span class="footlink"><a href="#">World</a></span>
+        <span class="footlink"><a href="#">U.S.</a></span>
+        <span class="footlink"><a href="#">Tech</a></span>
+        <span class="footlink"><a href="#">Science</a></span>
+      </div>
+      <div class="copyr">
+        <p id="copyright">© 2016, My Times (A Division of Codecademy bite)</p>
+      </div>
+    </div>
+
+
+
+
+
 
   </body>
 </html>
