--- a/index.html
+++ b/index.html
@@ -22,13 +22,49 @@
       <hr>
     </header>
 
-
     <div class="main">
-      <p> Testing out the content.</p>
+      <div class="column large">
+        <div class="article">
+          <div class="photo" id="phish">
+            <h1 class="phototitle">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+          </div>
+          <p class="articletext">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec.
+            Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus.
+            Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris.
+            Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit
+            imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+            sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque.
+            Nullam sit amet fringilla massa.</p>
+        </div>
+
+        <div class="article">
+          <h2 class="articletitle">Orca Spends Vacation at Land World Puget</h2>
+          <p class="article2text">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+        </div>
+
+        <div class="article">
+          <h2 class="articletitle">Burger for Breakfast: How Early is too Early?</h2>
+          <p class="article2text">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+        </div>
+
+        <div class="article">
+          <div class="photo" id="fall">
+            <h1 class="phototitle">Earth Spins Backwards for 2017</h1>
+          </div>
+        </div>
+
+        <div class="article">
+          <div class="photo" id="camera">
+            <h1 class="phototitle">Research Shows Cameras Erase Memory</h1>
+          </div>
+        </div>
+
     </div>
 
-
-
+      <div class="column medium"></div>
+      <div class="column small"></div>
+    </div>
 
     <div class="footer">
       <div class="footlinks">
