Additional tweaks to spacing

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
         <div class="article">
           <div class="photo" id="fall">
-            <h1 class="phototitle">Earth Spins Backwards for 2017</h1>
+            <h1 class="phototitle2">Earth Spins Backwards for 2017</h1>
           </div>
         </div>
 
         <div class="article">
           <div class="photo" id="camera">
-            <h1 class="phototitle">Research Shows Cameras Erase Memory</h1>
+            <h1 class="phototitle2">Research Shows Cameras Erase Memory</h1>
           </div>
         </div>
 
