--- a/index.html
+++ b/index.html
@@ -59,10 +59,40 @@
             <h1 class="phototitle2">Research Shows Cameras Erase Memory</h1>
           </div>
         </div>
-
     </div>
 
-      <div class="column medium"></div>
+      <div class="column medium">
+
+        <div class="article">
+          <h2 class="articletitle">FBI Finds Action Star Guilty of False Advertising</h2>
+          <p class="article2text">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis
+            condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+        </div>
+
+        <div class="article">
+          <div class="photo" id="phish">
+            <h1 class="phototitle">Cats in Control-Is It a Thing?</h1>
+          </div>
+          <p class="articletext">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
+            Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+        </div>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="column small"></div>
     </div>
 
