Final column text and CSS tweaks

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         </div>
 
         <div class="article">
-          <h2 class="articletitle">Orca Spends Vacation at Land World Puget</h2>
-          <p class="article2text">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          <h1 class="articletitle">Orca Spends Vacation at Land World Puget</h2>
+          <p class="article2text">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
+            Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
         </div>
 
         <div class="article">
-          <h2 class="articletitle">Burger for Breakfast: How Early is too Early?</h2>
+          <h1 class="articletitle">Burger for Breakfast: How Early is too Early?</h2>
           <p class="article2text">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
         </div>
 
@@ -64,36 +65,36 @@
       <div class="column medium">
 
         <div class="article">
-          <h2 class="articletitle">FBI Finds Action Star Guilty of False Advertising</h2>
+          <h1 class="articletitle">FBI Finds Action Star Guilty of False Advertising</h2>
           <p class="article2text">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis
             condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
         </div>
 
         <div class="article">
-          <div class="photo" id="phish">
+          <div class="photo" id="cat">
             <h1 class="phototitle">Cats in Control-Is It a Thing?</h1>
           </div>
           <p class="articletext">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
             Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
         </div>
-
       </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <div class="column small"></div>
+      <div class="column small">
+        <div id="cookie">
+        </div>
+        <div>
+          <h3 id="smalltitle">News Bites</h3?
+        </div>
+        <div>
+          <ul id="newsbites">
+            <li class="newsbites">Cat Emoji Goes Viral</li>
+            <li class="newsbites">Buy Youtube Views</li>
+            <li class="newsbites">Home Business Advertising Ideas</li>
+            <li class="newsbites">Advertising Internet Online</li>
+            <li class="newsbites">Illustration in Marketing Materials</li>
+            <li class="newsbites">Finally a Top Secret Way You Can</li>
+          </ul>
+      </div>
     </div>
 
     <div class="footer">
